<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar"/>

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"/>

    <LinearLayout
        android:id="@+id/parent_ll"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp">

            <ImageView
                android:id="@+id/otp_govt_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/govt_logo" />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <EditText
                android:layout_weight="0.5"
                android:id="@+id/otp"
                android:layout_gravity="center"
                android:inputType="phone"
                style="@style/EditTextStyle1"
                android:hint="OTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

            <TextView
                android:layout_weight="0.2"
                android:id="@+id/ttt"
                android:layout_marginTop="4dp"
                android:text="You will receive an OTP on your registered mobile number to reset password."
                android:layout_gravity="center"
                android:textStyle="italic"
                android:textSize="11sp"
                android:paddingStart="6dp"
                android:paddingLeft="6dp"
                android:gravity="start|top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/new_password"
                style="@style/EditTextStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:layout_weight="0.5"
                android:hint="Password"
                android:inputType="textPassword">

            </EditText>

            <EditText
                android:layout_weight="0.5"
                android:id="@+id/confirm_password"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:inputType="textPassword"
                android:hint="Confirm Password"
                style="@style/EditTextStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

            <Button
                android:layout_weight="0.5"
                android:text="SUBMIT"
                android:layout_marginTop="18dp"
                style="@style/LoginButtonStyle"
                android:id="@+id/password_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>





    </LinearLayout>

</RelativeLayout>