<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar" />

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/sks_2"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_password_label"
        style="@style/LabelStyle3"
        android:textColor="@color/app_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/enter_the_registered_mobile_number_associated_with_your_account"
        app:layout_constraintBottom_toTopOf="@+id/user_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />


    <EditText
        android:id="@+id/user_phone"
        style="@style/EditTextStyle1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/phone_submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_label">

    </EditText>


    <Button
        android:id="@+id/phone_submit"
        style="@style/LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:stateListAnimator="@null"
        android:text="@string/send_otp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>