...
            layout="@layout/profile_content_edit"
            android:visibility="invisible"
            app:layout_anchor="@id/view_layout"
            app:layout_anchorGravity="center" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right"
        android:stateListAnimator="@null"
...
        android:layout_marginEnd="18dp"
        app:srcCompat="@drawable/ic_edit_icon_color_24dp"
        tools:targetApi="lollipop" />


    <Button
        android:id="@+id/fab_edit_password"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_gravity="start|end"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
...
